@@ -6,9 +6,9 @@ plugins {
 }
 
 archivesBaseName = 'wino'
-group = 'seng202.team0'
-version = '1.0-SNAPSHOT'
-mainClassName = 'seng202.team0.App'
+group = 'seng202.team6'
+version = '0.2-snapshot'
+mainClassName = 'seng202.team6.App'
 
 def javaVersion = '21'
 def javafxVersion = '20.0.1'
@@ -32,6 +32,10 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.openjfx/javafx-web
     implementation "org.openjfx:javafx-web:${javafxVersion}"
+
+    // range slider
+    // https://mvnrepository.com/artifact/org.controlsfx/controlsfx
+    implementation 'org.controlsfx:controlsfx:11.1.2'
 
     // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
     implementation 'org.xerial:sqlite-jdbc:3.39.2.1'
@@ -74,6 +78,10 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.mockito/mockito-core
     testImplementation 'org.mockito:mockito-core:5.4.0'
+
+    implementation 'org.apache.poi:poi:5.2.0'
+    implementation 'org.apache.poi:poi-ooxml:5.2.0'
+
 }
 
 application {
@@ -83,27 +91,27 @@ application {
 
 javafx {
     version = "${javafxVersion}"
-    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web' ]
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.web']
 }
 
 test {
     useJUnitPlatform()
 
     filter {
-        includeTestsMatching "seng202.team0.unittests.*"
+        //includeTestsMatching "seng202.team0.unittests.*"
     }
 
     finalizedBy jacocoTestReport
 }
 
 
-tasks.register("cucumber", Test)  {
+tasks.register("cucumber", Test) {
     group = "verification"
 
     useJUnitPlatform()
 
     filter {
-        includeTestsMatching "seng202.team0.cucumber.*"
+        includeTestsMatching "seng202.team6.cucumber.*"
     }
 
     testLogging {
@@ -127,9 +135,15 @@ jar {
         attributes 'Main-Class': mainClassName
     }
     from {
-        configurations.runtimeClasspath.collect {it.isDirectory()?it:zipTree(it)}
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
+
+run {
+    // Add the internal JavaFX API to the module path
+    jvmArgs = ['--module-path', classpath.asPath, '--add-exports', 'javafx.web/com.sun.javafx.webkit=ALL-UNNAMED']
+}
+
 
 // Jacoco test coverage config
 jacoco {
@@ -142,5 +156,11 @@ jacocoTestReport {
     }
     reports {
         html.destination file("${buildDir}/reports/tests/coverage/")
+    }
+
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: 'seng202/team6/gui/**')
+        }))
     }
 }
